added copyright notice

--- a/index.html
+++ b/index.html
@@ -370,7 +370,8 @@
 				</li> 
 			</ul> 
 		</div><!-- /gallery -->
-	<br class="clear" /> 
+	<br class="clear" />
+	<p><small>&copy; 2011 Jake LaGory.</small></p>
 	</div><!-- /container -->
 
 	<script src="javascripts/jquery-1.3.2.min.js"></script> 
